<resources>
    <string name="app_name">Filenet Wallet</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="homepage_tab_text_news">兑换</string>
    <string name="homepage_tab_text_mall">资产</string>
    <string name="homepage_tab_text_mine">我的</string>
    <string name="mine_title">我</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="property_drawer_create_wallet">创建钱包</string>
    <string name="property_drawer_load_wallet">导入钱包</string>
    <string name="start_1">Filenet分布式存储赛道</string>
    <string name="start_2">领跑者</string>
    <string name="create_wallet_name_hint">钱包名称</string>
    <string name="create_wallet_pwd_hint">密码</string>
    <string name="create_wallet_pwd_again_hint">重复密码</string>
    <string name="create_wallet_pwd_reminder_info_hint">密码提示信息(可不填)</string>
    <string name="create_wallet_agreement_reminder">我已经仔细阅读并同意</string>
    <string name="create_wallet_agreement">服务及隐私条款</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="create_wallet_pwd_lenght_input_tips" translatable="false">密码长度至少为8位</string>
    <string name="create_wallet_mnemeric" translatable="false">助记词长度为12个单词</string>
    <string name="create_wallet_alert1">* 密码用于隐私保护和交易授权，强度非常重要</string>
    <string name="create_wallet_alert2">* FilenetWallet  不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="property_total_assets">总资产</string>
    <string name="property_approximate">≈</string>
    <string name="mine_wallet_manage">钱包管理</string>
    <string name="mine_trade_record">交易记录</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_contracts">联系人</string>
    <string name="prom_setting">保证金设置</string>
    <string name="currency_setting">货币单位</string>
    <string name="language_setting">语言设置</string>
    <string name="contact_us">联系我们</string>
    <string name="aboutwallet">关于Fn钱包</string>
    <string name="mine_personal_center">个人中心</string>
    <string name="mine_help_center">帮助中心</string>
    <string name="mine_about_us">关于我们</string>
    <string name="discovery_application">应用</string>
    <string name="discovery_news">文章</string>
    <string name="add_new_property_title">添加新资产</string>
    <string name="search_toolbar_cancel">取消</string>
    <string name="search_hint">搜索  Token  名称或合约地址</string>
    <string name="search_ico_empty_hint1">没找匹配的结果？</string>
    <string name="search_ico_empty_hint2">试试在页面底部提交新token</string>
    <string name="search_upload_token">向我们提交新Token</string>
    <string name="gathering_qrcode_title">收款码</string>
    <string name="gathering_qrcode_share">分享</string>
    <string name="gathering_qrcode_gathering_money">收款金额</string>
    <string name="gathering_qrcode_copy_gathering_address">复制</string>
    <string name="gathering_qrcode_copy_success">已复制</string>
    <string name="contact_no_data">暂时没有联系人</string>
    <string name="eth_transfer">ETH转入</string>
    <string name="etc_transfer_title">ETH转出</string>
    <string name="etc_transfer_address">收款人钱包地址</string>
    <string name="etc_transfer_from_address">付款人钱包地址</string>
    <string name="etc_transfer_money">转账金额</string>
    <string name="etc2fn_transfer_money">请输入数量</string>
    <string name="etc2fn_transfer_num">兑换数量</string>
    <string name="etc_transfer_remark">备注</string>
    <string name="etc_transfer_gas_cost_reference" translatable="false">矿工费用参考</string>
    <string name="etc_transfer_gas_cost">矿工费用</string>
    <string name="etc_fntransfer_gas_totalcost">总花费</string>
    <string name="etc_transfer_gas_price">自定义 Gas Price</string>
    <string name="etc_transfer_gas">自定义 Gas</string>
    <string name="etc_transfer_advanced_setting_help">如何设置参数?</string>
    <string name="etc_transfer_advanced_setting">高级选项</string>
    <string name="etc_transfer_hex_data">十六进制数据</string>
    <string name="etc_transfer_next">下一步</string>
    <string name="etc_transfer_gas_slow">慢</string>
    <string name="etc_transfer_gas_quick">快</string>
    <string name="etc_transfer_ether_unit">&#160;ether</string>
    <string name="etc_fntransfer_ether_unit_total">总金额：&#160;</string>
    <string name="property_detail_title">ETH</string>
    <string name="property_detail_transfer">转账</string>
    <string name="property_detail_gathering">收款</string>
    <string name="wallet_manager_create_wallet">创建钱包</string>
    <string name="wallet_manager_load_wallet">导入钱包</string>
    <string name="wallet_manager_title">管理钱包</string>
    <string name="news_center_all_read">全部已读</string>
    <string name="news_center_title">消息中心</string>
    <string name="system_setting_title">系统设置</string>
    <string name="system_setting_language">多语言</string>
    <string name="system_setting_currency">货币单位</string>
    <string name="system_setting_web3">web3设置</string>
    <string name="system_setting_gesture">收拾密码</string>
    <string name="language_setting_chinese">简体中文</string>
    <string name="language_setting_English">English</string>
    <string name="language_setting_save">保存</string>
    <string name="currency_unit_setting_cny">CNY</string>
    <string name="currency_unit_setting_usd">USD</string>
    <string name="web3_setting_wallet_service_url">WALLET SERVICE URL</string>
    <string name="web3_setting_wallet_service_url_hint">https://web3.token.im</string>
    <string name="web3_setting_reset_url">设置为默认的URL</string>
    <string name="trading_record_title">ETH账单</string>
    <string name="switch_wallet_title">切换账户</string>
    <string name="wallet_backup_tips1">强烈建议您立即备份助记词，以确保您的钱包安全</string>
    <string name="wallet_backup_tips2">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上，然后尝试转入、转出小额资产开始使用.</string>
    <string name="wallet_backup_backup_btn">备份钱包</string>
    <string name="wallet_backup_backup_help">查看备份详细教程</string>
    <string name="input_pwd_dialog_tip">请输入密码</string>
    <string name="input_pwd_delete_tip">请慎重，此操作无法撤销</string>
    <string name="input_pwd_dialog_confirm">确认</string>
    <string name="mnemonic_backup_title">备份助记词</string>
    <string name="mnemonic_backup_tips1">抄写下你的钱包助记词</string>
    <string name="mnemonic_backup_tips2">助记词用于恢复钱包或重置钱包密码，将它准确的抄写到纸上，并存放在只有你知道的安全的地方。</string>
    <string name="mnemonic_backup_alert_tips">如果有人获取你的助记词将直接获取你的资产！请抄写下助记词并存放在安全的地方。</string>
    <string name="mnemonic_backup_alert_btn">知道了</string>
    <string name="mnemonic_backup_alert_title">请勿截图</string>
    <string name="verify_backup_tip1">确认你的钱包助记词</string>
    <string name="verify_backup_tip2">请按顺序点击助记词，以确认你的备份助记词正确。</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="load_wallet_title">导入钱包</string>
    <string name="load_wallet_btn">开始导入</string>
    <string name="load_wallet_indicator_mnemonic">助记词</string>
    <string name="load_wallet_indicator_keystore">keystore</string>
    <string name="load_wallet_indicator_official">官方钱包</string>
    <string name="load_wallet_indicator_private_key">私钥</string>
    <string name="load_wallet_indicator_observer">观察</string>
    <string name="load_wallet_by_mnemonic_hint">请输入您的助记词，以空格分割，支持m/44\'/60\'/0\'/0/0格式。</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_by_mnemonic_standard">m/44\'/60\'/0\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_ledger">m/44\'/60\'/0\'/0</string>
    <string name="load_wallet_by_mnemonic_standard_custom">m/44\'/60\'/1\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_jaxx_option">m/44\'/60\'/0\'/0/0 Jaxx,Metamask(ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_ledger_option">m/44\'/60\'/0\'/0 Ledger (ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_custom_option">m/44\'/60\'/1\'/0/0 自定义路径</string>
    <string name="load_wallet_by_mnemonic_help">什么是助记词？</string>
    <string name="load_wallet_already_exist">钱包已存在</string>
    <string name="load_wallet_by_official_wallet_keystore_hint">keystore 文本内容</string>
    <string name="load_wallet_by_official_wallet_keystore_tip">直接复制粘贴以太坊官方钱包keystore文件内容至输入框。或者通过生成keystore内容的二维码，扫描录入。</string>
    <string name="load_wallet_by_official_wallet_help">什么是keystore？</string>
    <string name="load_wallet_by_official_wallet_keystore_input_tip">keystore文件无效</string>
    <string name="load_wallet_by_private_key_input_tip">无效的私钥</string>
    <string name="load_wallet_by_private_key_hint">明文私钥</string>
    <string name="load_wallet_by_private_key_help">什么是私钥？</string>
    <string name="load_wallet_by_observer_tip">观察钱包不需要导入私钥，只导入钱包地址，进行日常查看账户、交易和接受通知。大额资金的私钥建议使用冷钱包或硬件钱包管理，避免泄漏被盗。</string>
    <string name="load_wallet_by_observer_hint">扫码或输入钱包地址</string>
    <string name="load_wallet_by_observer_attention">注意：观察钱包发送交易时需要冷钱包配合签名。你可以使用另一台闲置手机，开飞行模式作为冷钱包，导入钱包私钥，配合离线签名。</string>
    <string name="wallet_detail_wallet_name">钱包名</string>
    <string name="wallet_detail_modify_pwd">修改密码</string>
    <string name="wallet_detail_derive_private_key">导出私钥</string>
    <string name="wallet_detail_derive_keystore">导出keystore</string>
    <string name="wallet_detail_derive_nmic">导出助记词</string>
    <string name="mine_system_setting">系统设置</string>
    <string name="wallet_detail_delete_wallet">删除钱包</string>
    <string name="wallet_delete_success">钱包删除成功</string>
    <string name="wallet_detail_save_success">保存成功</string>
    <string name="wallet_detail_wrong_pwd">密码错误</string>
    <string name="modify_password_title">更改密码</string>
    <string name="modify_password_old_pwd">当前密码</string>
    <string name="modify_password_new_pwd">新密码</string>
    <string name="modify_password_old_pwd_again">重复新密码</string>
    <string name="modify_password_tip">忘记密码？导入助记词或私钥可重置密码。</string>
    <string name="modify_password_import">马上导入</string>
    <string name="modify_password_complete">完成</string>
    <string name="modify_password_pwd_alert1">请输入原密码</string>
    <string name="modify_password_alert2">请输入新密码</string>
    <string name="confirm">确认</string>
    <string name="available_balance" translatable="false">可用余额</string>
    <string name="identity_password_tips">请输入你的密码，以确认你的身份</string>
    <string name="select_import_tips">请根据您的钱包选择导入方法</string>
    <string name="private_key_import">私钥导入</string>
    <string name="mnemonic_import">助记词导入</string>
    <string name="keep_in_a_safe_place_tips">助记词用于恢复钱包和重置密码，非常重要！ 一定要把它放在安全的地方！</string>
    <string name="mnemonic_tips_2">确保您的环境安全且私密。请将助记词准确地抄写到纸上,并存放在只有你知道的安全位置。</string>
    <string name="keystore_import">Key store 导入</string>
    <string name="note">留言</string>
    <string name="transfer_amount">转出金额:</string>
    <string name="vote_address">投票地址:</string>
    <string name="Please_input_vote_address">请输入投票地址</string>
    <string name="Please_enter_the_transfer_amount">请输入转出金额</string>
    <string name="lock_period">锁定期限</string>
    <string name="lock_period_a_month">1个月</string>
    <string name="lock_period_add">（259200 Expiredblock）</string>
    <string name="what_is_vote">&#160;什么是投票？</string>
    <string name="what_vote">什么是投票？</string>
    <string name="how_vote">如何投票？</string>
    <string name="what_vote_explain1">投票是指用户用投票方式参与竞选打包节点活动的行为。</string>
    <string name="what_vote_explain2">成为打包节点需最少获得40万FN票数，并且在排名前105名，打包节点获得的票数越高获得打包资格的概率越大。</string>
    <string name="what_vote_explain3">所有打包节点将获得挖矿总数的10%作为记账收益，即区块打包收益。</string>
    <string name="what_vote_explain4">投票需要抵押代币，期限为1个自然月，到期自动原路返回。</string>
    <string name="what_vote_explain5">每月1号统计上月投票票数，确定哪些节点成功竞选为打包节点。</string>
    <string name="how_vote_explain1">进入filenet钱包内的投票入口即可对竞选的打包节点投票。</string>
    <string name="how_vote_explain2">投票采用票选制，每一个FN为一票。</string>
    <string name="how_vote_explain3">投票地址填写参与竞选的打包节点地址。</string>
    <string name="how_vote_explain4">用户投票后需经过审核同意，投票方能有效。</string>
    <string name="how_vote_explain5">投票期限为1个月，到期退回后需重新投票。</string>
</resources>