<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F8F8F8"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="·"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_vote"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/what_vote_explain1"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/what_vote_explain2"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/what_vote_explain3"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/what_vote_explain4"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/what_vote_explain5"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F8F8F8"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="·"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_vote"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/how_vote_explain1"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/how_vote_explain2"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/how_vote_explain3"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/how_vote_explain4"
                android:textColor="#999999"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/how_vote_explain5"
                android:textColor="#999999"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>