<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_common_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/property_drawer_load_wallet"
        android:textColor="@color/tv_title_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/select_import_tips"
        android:textColor="@color/tv_title_color"
        android:textSize="13sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/common_line_color" />

    <TextView
        android:id="@+id/mnemonic_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/mnemonic_import"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/common_line_color" />

    <TextView
        android:id="@+id/private_key_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/private_key_import"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/common_line_color" />

    <TextView
        android:id="@+id/key_store_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/keystore_import"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/common_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/search_toolbar_cancel"
            android:textColor="@color/btn_common_color"
            android:textSize="13sp" />
    </LinearLayout>


</LinearLayout>