<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/vote_address"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/edtVoteAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/Please_input_vote_address"
            android:maxLines="3"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textColor="@color/color_333333"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/ivQrScanner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:enabled="false"
            android:padding="@dimen/dp_12"
            android:src="@mipmap/ic_black_scan" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16">

        <TextView
            android:id="@+id/fnCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/available_balance"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/transfer_amount"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/edtTransferCountVote"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/Please_enter_the_transfer_amount"
            android:inputType="number"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textColor="@color/color_333333"
            android:textSize="12sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="FN" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lock_period"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=":"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lock_period_a_month"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_period_add"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_10"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/note"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <io.filenet.wallet.view.ContainsEmojiEditText
            android:id="@+id/edtVoteContentContent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="200"
            android:maxLines="3"
            android:padding="@dimen/dp_16"
            android:textColor="@color/color_333333"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="22dp"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/btn_approve"
        android:clickable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/btn_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/what_is_vote"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/sp_14" />

</LinearLayout>