<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_common_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/input_pwd_dialog_tip"
        android:textColor="@color/tv_title_color"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/dialog_password_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/identity_password_tips"
        android:textColor="@color/discovery_application_text_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_delete_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/input_pwd_delete_tip"
        android:textColor="@color/discovery_application_text_color"
        android:textSize="14sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/etc_transfer_hex_data_et_shape"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@color/common_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/search_toolbar_cancel"
            android:textColor="@color/btn_common_color"
            android:textSize="13sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/common_line_color" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/input_pwd_dialog_confirm"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
    </LinearLayout>


</LinearLayout>