<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_56"
        android:layout_marginRight="56dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/mnemonic_backup_tips1"
            android:textColor="@color/discovery_application_text_color"
            android:textSize="15sp"
            android:visibility="gone" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical"
            android:text="@string/mnemonic_tips_2"
            android:textColor="@color/property_ico_worth_color"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/mnemonic_backup_tips2"
            android:textColor="@color/property_ico_worth_color"
            android:textSize="13sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mnemonic_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:paddingBottom="@dimen/dp_10">

        </android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/keep_in_a_safe_place_tips"
            android:textColor="@color/note_tips"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_mnemonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.5"
            android:padding="15dp"
            android:textColor="@color/discovery_application_text_color"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_common_btn"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/etc_transfer_next"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>


</LinearLayout>